# manrust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  spec.md
.github/workflows/: publish-pypi.yml
assets/: cover.tape
src/: app.rs  colorize.rs  config.rs  main.rs  man.rs  search.rs  ui.rs
