[package]
name = "man-tui"
version = "0.1.1"
edition = "2021"
description = "A fast, keyboard-first terminal UI for browsing Linux/macOS man pages"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aksharahegde/manrust"
homepage = "https://github.com/aksharahegde/manrust"
keywords = ["man", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "1"
dirs = "6"
